<resources>
    <string name="app_name" translatable="false">SimpleNote</string>
    <string name="Plus" translatable="false">+</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title" translatable="false">Title</string>
    <string name="title1" translatable="false">Title…</string>
    <string name="type_note_here" translatable="false">Type Note here…</string>
    <string name="bottom" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehaviour</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_text">Delete it?</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>

    <!-- Personal Information-->
    <string name="dev_email">lina.buller@gmail.com</string>
    <string name="dev_github">https://github.com/LinaBuller/EasyNote.git</string>


    <!-- Drawer Menu Strings-->
    <string name="settings">Settings</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="dev">Developer</string>
    <string name="rate_app">Rate the app?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account">Account</string>

    <!-- Sign Dialog-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_action">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_action">Sign In</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forget password?</string>


    <string name="password_contains">Password must be at least 6 characters and contain a letter, number and character</string>
    <string name="need_second_password">Please type the password again</string>
    <string name="title_change_password">Changing your password</string>
    <string name="password_not_equal">You entered two different passwords.</string>

    <string name="not_reg">Log in or register</string>
    <string name="sign_out_mes">You\'re signed out of the account</string>

    <string name="sign_in_error">failed to log in</string>
    <string name="sign_in_done">Sign in done</string>
    <string name="forget_password_message">We will help you! Write your e-mail</string>
    <string name="ok">Ok</string>


    <string name="sign_in_successful">You successfully log in.</string>
    <string name="sign_in_failure">There was an error while logging in. Check your credentials and try again.</string>
    <string name="sign_up_successful">Successfully registered! Check your E-Mail to verify your account.</string>
    <string name="sign_up_failure">An error occurs when user\'s registration</string>
    <string name="log_out_successful">You successfully log out </string>
    <string name="log_out_failure">There was an error while logging out.</string>
    <string name="send_reset_email_successful">Reset e-mail was sent</string>
    <string name="send_reset_email_failure">Reset e-mail wasn\'t sent</string>
    <string name="change_pass_successful">You successfully changed your password</string>
    <string name="change_pass_failure">There was an error while changing your password. </string>


    <string name="tags">Tags</string>
    <string name="menu">Menu</string>
    <string name="add_images_camera">Add images use Camera</string>
    <string name="add_images_gallery">Upload from Gallery</string>
    <string name="search">Search</string>
    <string name="no_title">No title</string>
    <string name="sending_simple_text">Share this note as text</string>
    <string name="sending_note_json">Share this note as a JSON file</string>
    <string name="category">Category</string>
    <string name="new_category">New category</string>
    <string name="add_category_to_note">Add category to note</string>
    <string name="title_activity_drawer_right">ActivityDrawerRight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_more_asking_me">No more asking me</string>
    <string name="this_category_will_be_removed_from_all_notes">This category will be removed from all notes</string>
    <string name="title_sort_a_z">A - Z</string>
    <string name="title_sort_z_a">Z - A</string>
    <string name="sort_oldest_newest">Old - New</string>
    <string name="sort_newest_oldest">New - Old</string>
    <string name="filter_by_date">By date</string>

    <string name="title_activity_main_new">MainNewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="imagePickerEmpty">No images found</string>

    <string name="imagePickerLoading">Loading…</string>

    <string name="toastImagePickerNoWritePermission">Write storage permission not granted :(</string>

    <string name="imagePickerSingle">Please select an image</string>


    -
    <plurals name="imagePickerMulti">
        <item quantity="one">You have selected one image</item>
        <item quantity="other">You have selected %1$d images</item>
    </plurals>


    -
    <plurals name="imagePickerMultiMore">
        <item quantity="one">You have to select one more image</item>
        <item quantity="other">You have to select %1$d more images</item>
    </plurals>

    <string name="imagePickerMultiLimit">You cannot select more than %1$d images</string>
    <string name="file_provider">"com.buller.mysqlite.fileprovider"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notes">Notes</string>
    <string name="delete_all">Delete all</string>
    <string name="no_sort">No sort</string>

    <!-- Dev Fragment -->
    <string name="dev_info_1">Hi, it\'s your developer!</string>
    <string name="dev_info_2">This app is my first.</string>
    <string name="dev_info_3">I would be very grateful if you would leave your rating on Google Play.</string>
    <string name="dev_info_4">I looking for work or internship.</string>
    <string name="dev_info_5">Thanks!</string>
    <string name="dev_info_6">lina.buller@gmail.com</string>
    <string name="dev_info_7"><u>Here you can find the app code</u></string>
    <string name="add_photo">Add Photo</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_this_note_to_the_archive">Add this note to the archive?</string>
    <string name="search_history">Search history</string>
    <string name="cancel">Cancel</string>
    <string name="add_tags">Add tags</string>
    <string name="tag">Tag</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="need_permission">Hi! Don\'t worry!\n  \nWe need permissions for the application. \n \nPlease provide them for correct operation.
\n \nThank you!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="archive">Archive</string>

    <string name="selected_items">%1$d selected</string>
    <string name="return_from_archive">Return from archive</string>
    <string name="massage_return_from_archive">Do you want return this note from archive?</string>
    <string name="massage_return_from_archive_items">Do you want return this notes from archive?</string>
    <string name="not_selected_items">You haven\'t select any element </string>

    <string name="permission_required">Permission Required</string>
    <string name="permission_grand">Grand</string>
    <string name="multiselect">Multiselect</string>


    <string name="dialog_save_title">Save notes</string>
    <string name="dialog_save_message">Do you want save this changes?</string>

    <string name="dialog_delete_selected_items">Do you want delete selected items?</string>
    <string name="message_permanent_delete">This note will be permanently deleted. Delete it?</string>
    <string name="move_to">Move to</string>

    <string name="title_restore">Restore</string>
    <string name="message_restore_note">Do you want restore this note?</string>
    <string name="message_restore_items">Do you want restore selected items?</string>

    <string name="edit_title_category">Edit title category</string>
    <string name="message_permanent_delete_category">
        This category will be permanently deleted.\n
        Deleting a category will remove it from all the notes in which it was. \n\n
        Delete this category?</string>
    <string name="need_more_letters">We need more letters</string>
    <string name="need_more_letters_password">We need more letters in the password</string>
    <string name="hello">Hi! </string>
    <string name="hello_sign_in_message">We glad to see you again</string>
    <string name="hello_sign_up_message">Nice to meet you </string>
    <string name="allow">Allow</string>
    <string name="attention">Attention!</string>
    <string name="retrieve_database"> If you enter data from a remote source, all not synchronized data will be deleted.\n\nApp will be reloaded to update data.\n\nYou want to recover the data?</string>

    <string name="sort_a_z">Sort A - Z</string>
    <string name="sort_z_a">Sort Z - A</string>
    <string name="sort_new_old">Sort New - Old</string>
    <string name="sort_old_new">Sort Old - New</string>
    <string name="sort_special_date">You selected date:</string>
    <string name="delete_fav_color">Do you want  delete this color?</string>
    <string name="undelete">Undelete</string>
    <string name="permanently_delete">Permanently Delete</string>
    <string name="unarchive">Unarchive</string>
</resources>