<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/account"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/ac_sign_up"
                android:title="@string/sign_up" />
            <item
                android:id="@+id/ac_sign_in"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/ac_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

    <item
        android:id="@+id/rec_bin"
        android:icon="@drawable/ic_delete"
        android:title="@string/recycle_bin" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/dev"
        android:icon="@drawable/ic_dev"
        android:title="@string/dev" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/rate_app" />

</menu>