<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mode"
        android:icon="@drawable/ic_multiselect"
        android:title="@string/multiselect"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/in_arch_note"
        android:icon="@drawable/ic_arch"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/out_arch_note"
        android:icon="@drawable/ic_cancel_24"
        android:title="@string/unarchive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shared_note"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/delete_note"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/undelete_note"
        android:icon="@drawable/ic_cancel_24"
        android:title="@string/undelete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/permanent_delete_note"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/permanently_delete"
        app:showAsAction="ifRoom" />

</menu>