<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom">

        <Button
            android:id="@+id/btImageGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_images_gallery" />

        <Button
            android:id="@+id/btImageCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_images_camera" />

</LinearLayout>