<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom">

    <Button
        android:id="@+id/btExportSimpleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sending_simple_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btExportJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sending_note_json"
        app:layout_constraintEnd_toEndOf="@+id/btExportSimpleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExportSimpleText" />

    <Button
        android:id="@+id/btCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btExportJson"
        app:layout_constraintTop_toBottomOf="@+id/btExportJson" />

</androidx.constraintlayout.widget.ConstraintLayout>