<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/fieldSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="@drawable/background_field_search_fragment"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search Here" />

        <Button
            android:id="@+id/btCancel"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitleSearchHistory"
        style="@style/CustomTextViewSearchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcSearchHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleSearchHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSearchHistory"
        tools:itemCount="3"
        tools:listitem="@layout/rc_item_history_search_fragment" />

    <TextView
        android:id="@+id/tvTitleCategory"
        style="@style/CustomTextViewSearchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rcSearchHistory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitleCategory"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCategory"
        tools:itemCount="3"
        tools:listitem="@layout/rc_item_category_search_fragment" />

    <TextView
        android:id="@+id/tvTitleTags"
        style="@style/CustomTextViewSearchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        app:layout_constraintTop_toBottomOf="@id/rcCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleTags"
        app:layout_constraintStart_toStartOf="@+id/tvTitleTags"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTags"
        tools:itemCount="3"
        tools:listitem="@layout/rc_item_tags_search_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>